# grove

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  grove-conflicts.yml  release.yml
action/: action.yml  package-lock.json  package.json
action/src/: analyze.js  comment.js  format.js  install.js  main.js  matrix.js  refs.js  retry.js
crates/grove/: Cargo.toml
crates/grove-cli/: Cargo.toml
crates/grove-cli/src/: bootstrap.rs  client.rs  lib.rs  render.rs
crates/grove-cli/src/commands/: check.rs  ci.rs  conflicts.rs  init.rs  list.rs  mod.rs  status.rs
crates/grove-daemon/: Cargo.toml
crates/grove-daemon/src/: db.rs  git.rs  lib.rs  lifecycle.rs  socket.rs  state.rs  watcher.rs  worker.rs
crates/grove-lib/: Cargo.toml
crates/grove-lib/proptest-regressions/: scorer.txt
crates/grove-lib/src/: changeset.rs  conflict-test.rs  diff.rs  fs.rs  graph.rs  lib.rs  merge_order.rs  schema.rs  scorer.rs  treesitter.rs  types.rs
crates/grove-lib/src/languages/: csharp.rs  go_lang.rs  java.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/grove-lib/tests/fixtures/: scorer_conflicting_pairs.json  scorer_non_conflicting_pairs.json
crates/grove-tui/: Cargo.toml
crates/grove-tui/src/: app.rs  events.rs  lib.rs  ui.rs
crates/grove/src/: main.rs
crates/grove/tests/: ci_analyze_test.rs  json_error_output_test.rs  smoke_test.rs
docs/plans/: 2026-02-20-grove-design.md  2026-02-20-grove-implementation-plan.md  2026-02-21-java-analyzer-design.md  2026-02-21-java-analyzer-implementation.md  2026-02-21-zero-config-bootstrap-impl.md  2026-02-21-zero-config-bootstrap.md  2026-03-11-pr-conflict-checker-design.md
npm/: package.json.tmpl
npm/grove/: package.json
tests/stress/: chaos.sh  hammer.sh
