[package]
name = "grove-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
grove-lib = { path = "../grove-lib" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
gix = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
