[package]
name = "grove"
version.workspace = true
edition.workspace = true

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
grove-cli = { path = "../grove-cli" }
grove-daemon = { path = "../grove-daemon" }
grove-tui = { path = "../grove-tui" }
daemonize = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
grove-lib = { path = "../grove-lib" }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
